# Auto-DND

./: .gitignore  Cargo.toml  project_goals.md
classes/: cleric.ron  fighter.ron  mage.ron  thief.ron
enemies/: bugbear.ron  goblin.ron  rat.ron  spider.ron  test.ron
enemies/test/: guard.ron  orc.ron
enemies/undead/: zombie.ron
items/armor/: helmet.ron  plate_armor.ron  shield.ron
items/misc/: backpack.ron
items/treasure/: gold_piece.ron  silver_piece.ron
items/weapons/: spear.ron
proficiencies/: adventuring.ron  alchemy.ron  craft.ron  divine_blessing.ron  elementalism.ron  fighting_style.ron  knowledge.ron
simple_enum_macro/: Cargo.toml
simple_enum_macro/src/: lib.rs
src/: character.rs  class.rs  combat.rs  common_ui.rs  dice.rs  dm_app.rs  enemy.rs  item.rs  main.rs  map.rs  mortal_wounds.rs  packets.rs  party.rs  player_app.rs  proficiency.rs  race.rs  spell.rs
