[package]
name = "dm_automation_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_enum_macro = { path = "./simple_enum_macro" }
egui = { version = "0.22.0", features = ["serde"] }
eframe = "0.22.0"
rand = "0.8.5"
local-ip-address = "0.5.3"
serde = { version = "1.0.163", features = ["derive"] }
ron = "0.8.0"
chrono = "0.4.24"
displaydoc = "0.2.4"
lazy_static = "1.4.0"
array-macro = "2.1.5"
egui_extras = "0.22.0"
egui-phosphor = "0.1.1"
egui_dock = "0.6.3"
thousands = "0.2.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }